# daera_clearing

./: Dockerfile  Rx-1.6.3-py2.py3-none-any.whl  pyproject.toml  requirements.txt  zsh.exe.stackdump
myapp/: .env_db_backend  .env_total  docker-compose.yml  init.sql
myapp/backend/: .env  config.py  daera_schema.py  init.sql  list_packages.py  main.py  models.py  schema.py
myapp/docker_backend/: .env  Dockerfile  alembic.ini  config.py  daera_schema.py  main.py  pyproject.toml  schema.py  schema_daera.py
myapp/docker_backend/Graphql/: mutation.py  query.py
myapp/docker_backend/Model/: note.py  tables_daera.py
myapp/docker_backend/Repository/: daera_repositories.py  note.py  repositories_daera.py
myapp/docker_backend/Service/: daera_services.py  services_daera.py  services_note.py
myapp/docker_backend/alembic/: env.py
myapp/docker_backend/alembic/versions/: 26b88952d290_add_two_model_definition_metadata.py  34a533df5135_add_modified_at_second_try_04.py  48e16050739f_add_modified_at_second_try_66.py  6be1d0ae842e_many_setting_gameinfo_data_02.py  6e3de3ffdc10_try_default_05.py  8530e6aae58b_many_setting_gameinfo_data_01.py  95a9bd2bd5c1_add_modified_at_second_try_7.py  9f918f578dc1_playtimemin_playtimemin.py  a625a4fd95aa_many_setting_transactionlog_data_01.py  a7f4687c4960_try_default_01.py  dacce15bfbbd_many_setting_resultofplayer_data_04.py  e4925068d03f_try_default_03.py  f7094684ecb1_add_modified_at_second_try_02.py
myapp/docker_backend/temp_del/: init.sql  list_packages.py
myapp/docker_backend/tests/: test_player_crud.py
myapp/frontend/: app.py
(+25 files in other folders)
